# CodigosProgramacion2

./: DebugClasesAnimal.docx  resumen.docx
Herencia/: CMakeLists.txt  Fruta.cpp  Fruta.h  Haki.cpp  Haki.h  Persona.cpp  Persona.h  Pirata.cpp  Protagonista.cpp  Protagonista.h  ReyDeLosPiratas.cpp  ReyDeLosPiratas.h  Yonkou.h  main.cpp
Lectura/: main.cpp
Programas/: Automovil.cpp  Automovil.h  BooleanCell.cpp  BooleanCell.h  CMakeLists.txt  CharCell.cpp  CharCell.h  DoubleCell.cpp  DoubleCell.h  FloatCell.cpp  FloatCell.h  IntCell.cpp  IntCell.h  Persona.cpp  Persona.h  Pirata.h  Yonkou.cpp  main.cpp
Zoo/: Ajolote.cpp  Ajolote.h  Animal.cpp  Animal.h  CMakeLists.txt  Caballo.cpp  Caballo.h  Gato.cpp  Gato.h  Perro.cpp  Perro.h  Rana.cpp  Rana.h  Serpiente.cpp  Serpiente.h  Tortuga.cpp  Tortuga.h  main.cpp
