cmake_minimum_required(VERSION 3.26)
project(Programas)

set(CMAKE_CXX_STANDARD 17)

add_executable(Programas main.cpp
        Automovil.h
        Automovil.cpp
        FloatCell.cpp
        IntCell.h
        CharCell.h
        IntCell.cpp
        DoubleCell.h
        DoubleCell.cpp
        BooleanCell.h
        CharCell.cpp
        BooleanCell.cpp
        Pirata.h
        Pirata.cpp
        Yonkou.h
        Yonkou.cpp
)
