cmake_minimum_required(VERSION 3.26)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        Animal.h
        Perro.h
        Perro.cpp
        Animal.cpp
        Caballo.h
        Caballo.cpp
        Gato.h
        Gato.cpp
        Tortuga.h
        Tortuga.cpp
        Ajolote.h
        Ajolote.cpp
        Rana.cpp
        Rana.cpp
        Serpiente.h
        Serpiente.cpp)
